deployment/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: beam-mp
  labels:
    name: beam-mp
