deployment/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: beam-mp
  labels:
    app: beam-mp
spec:
  selector:
    matchLabels:
      app: beam-mp
  template:
    metadata:
      labels:
        app: beam-mp
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: beam-mp-server
        image: registry.qtmsheep.com/vagahbond/beammp_server
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 30814
        - containerPort: 8083
        volumeMounts:
        - mountPath: /server_files
          name: beam-mp-data
      volumes:
      - name: beam-mp-data
        persistentVolumeClaim:
          claimName: beam-mp-pvc
