deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beam-mp-ingress
  labels:
    name: beam-mp-ingress
spec:
  rules:
    - host: beammptest.vagahbond.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: beam-mp-service
                port:
                  number: 8087
    # - host: beammp.vagahbond.com
    #   http:
    #     paths:
    #       - pathType: Prefix
    #         path: "/"
    #         backend:
    #           service:
    #             name: beam-mp-service
    #             port:
    #               number: 30814
